docker/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: scrimfinder
            - name: MYSQL_ROOT_PASSWORD
              value: scrimfinder
          image: mysql:8.0
          name: db
          ports:
            - containerPort: 3306
          resources: {}
          securityContext:
            capabilities:
              add:
                - SYS_NICE
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db
            - mountPath: /docker-entrypoint-initdb.d/init.sql
              name: db-claim1
      restartPolicy: Always
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: db
        - name: db-claim1
          persistentVolumeClaim:
            claimName: db-claim1
status: {}
