docker/mysql-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f files/docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql-db
  name: mysql-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f files/docker-compose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/spring-cloud-network: "true"
        io.kompose.service: mysql-db
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: scrimfinder
            - name: MYSQL_ROOT_PASSWORD
              value: scrimfinder
          image: mysql:8.0
          name: mysql-db
          ports:
            - containerPort: 3306
          resources: {}
          securityContext:
            capabilities:
              add:
                - SYS_NICE
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-db
            - mountPath: /docker-entrypoint-initdb.d/init.sql
              name: mysql-db-claim1
      restartPolicy: Always
      volumes:
        - name: mysql-db
          persistentVolumeClaim:
            claimName: mysql-db
        - name: mysql-db-claim1
          persistentVolumeClaim:
            claimName: mysql-db-claim1
status: {}
