docker/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f files/docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f files/docker-compose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/rabbitmq-go-net: "true"
        io.kompose.service: rabbitmq
    spec:
      containers:
        - args:
            - bash
            - -c
            - chmod 400 /var/lib/rabbitmq/.erlang.cookie; rabbitmq-server
          image: rabbitmq:3-management-alpine
          name: rabbitmq
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/rabbitmq/
              name: rabbitmq-claim0
            - mountPath: /var/log/rabbitmq
              name: rabbitmq-claim1
      restartPolicy: Always
      volumes:
        - name: rabbitmq-claim0
          persistentVolumeClaim:
            claimName: rabbitmq-claim0
        - name: rabbitmq-claim1
          persistentVolumeClaim:
            claimName: rabbitmq-claim1
status: {}
