docker/scrimfinderfe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f files/docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: scrimfinderfe
  name: scrimfinderfe
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: scrimfinderfe
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f files/docker-compose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: scrimfinderfe
    spec:
      containers:
        - image: semplasmeijer/scrimfinderfe:fev1
          name: scrimfinder-fe
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
