docker/scrimfinderfe-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f files/docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: scrimfinderfe
  name: scrimfinderfe
spec:
  type: NodePort
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
      nodePort: 31330
  selector:
    io.kompose.service: scrimfinderfe
status:
  loadBalancer: {}
